2003-03-20  Gary Thomas  <gary@mlbassoc.com>

	* src/common/serial.c: Only return -EAGAIN if no data moved.

2003-03-11  Gary Thomas  <gary@mlbassoc.com>

	* src/common/termiostty.c (termios_read): VMIN handling still wasn't
	quite correct.  When VMIN > 0, at least VMIN characters should be
	read.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/io_serial.cdl: Fix doc link.

2003-02-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/termiostty.c: Support VMIN > 0 properly.

2002-12-10  Gary Thomas  <gthomas@ecoscentric.com>

	* src/common/tty.c (tty_write): Only return number of characters
	in original string which were written - don't include any CR/LF
	expansion characters.

2002-04-23  Jesper Skov  <jskov@redhat.com>

	* tests/serial3.c (serial_test): Use 19200 baud rate when board
	cannot handle 38400.
	* tests/serial5.c (serial_test): Same.

2002-02-19  Jesper Skov  <jskov@redhat.com>

	* cdl/io_serial.cdl: Removed termiostty.c build rule.

	* cdl/termios.cdl: Make termiostty.c building depending on actual
	requirements for its content.

2002-02-15  Jesper Skov  <jskov@redhat.com>

	* tests/flow1.c: Also try DSR/DTR flow control (presently
	unsupported by Linux though).
	* tests/flow2.c: Same.

2002-01-11  Jonathan Larmour  <jlarmour@redhat.com>

	* src/common/termiostty.c (termios_read): Don't return after VMIN,
	this was a stupid thing to do and decreases performance a lot.

2001-08-15  Gary Thomas  <gthomas@redhat.com>

	* tests/ser_test_protocol.inl: Change NONE in 'cyg_verbosity_level_t'
	to be _NONE [unused] to avoid name clash with <kernel/kapi.h>.

2000-12-08  Jonathan Larmour  <jlarmour@redhat.com>

	* src/common/serial.c: Fix CYGOPT_IO_SERIAL_FLOW_CONTROL_HW ->
	CYGOPT_IO_SERIAL_SUPPORT_LINE_STATUS typo when declaring callbacks
	Thanks to Brian Danilko for reporting.

2000-11-22  Jesper Skov  <jskov@redhat.com>

	* src/common/serial.c: Changed #ifdef to #if used on an interface
	option.
